chore: build script, add script run-local

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,6 @@
 *.iml
 *.ipr
 *.iws
-<<<<<<< HEAD
-#*.jar
-=======
->>>>>>> develop
 *.sw?
 *~
 .#*
@@ -44,11 +40,9 @@ secrets.yml
 .gradletasknamecache
 .sts4-cache
 
-<<<<<<< HEAD
 # CUSTOM
 nohup.out
 /*.jar
 /*.yml
-=======
-./*.jar
->>>>>>> develop
+/*.yaml
+/*.log
