feat: user entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Local
+server.port=8090
 
+spring.datasource.url=jdbc:h2:mem:heys
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.defer-datasource-initialization=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
