--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,17 @@ spring.datasource.url=jdbc:h2:mem:heys;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.validator.apply_to_ddl=false
 #spring.jpa.defer-datasource-initialization=true
+
+# flyway setting
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.generate-ddl=false
+#spring.flyway.enabled=false
+#spring.flyway.baselineOnMigrate = true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
