feat: Channel, Content API
Channel
- POST join
- GET list
- GET follow list

Content
- Entity (DB Migration)
-- company added
-- thumbnailUri added

User
- PUT check-member

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.show-sql=false
 # flyway setting
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.generate-ddl=false
-#spring.flyway.enabled=false
+spring.flyway.enabled=false
 #spring.flyway.baselineOnMigrate = true
 
 spring.h2.console.enabled=true
