--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:heys
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
 spring.flyway.enabled=false
