feat: content & channel domain changed
Content
- Study 타입 제거
- 공모전/대외활동 컨텐츠 이외의 타입 추가 가능성 있어, Content detail 부분을 분리하기로 결정
- extra_content_detail - Detail Entity 추가
- 변경된 entity 에 따른 Content API 전면 수정
- 변경된 API Service Test Code 작성

Channel
- channel_detail 추가
- 기존 study 타입 channel 로 옮김
- 기존 channel 데이터 channel_detail 로 옮김
- channel_link relation table 추가
- 정의 후 테스트 미완

DB Migration
- 변경점이 매우 많기 때문에 initial version 제거

--- a/aws-application.yml
+++ b/aws-application.yml
@@ -15,7 +15,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        format_sql: true
+        default_batch_fetch_size: 500
     hibernate:
       ddl-auto: validate
       jdbc:
