--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,17 @@
-spring.datasource.username=sa
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:heys
 spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/heys
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:heys
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.jdbc.time_zone=Asia/Seoul
+spring.jpa.hibernate.connection.characterEncoding=UTF8
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_batch_fetch_size=500
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
-spring.flyway.enabled=false
+#spring.flyway.enabled=true
+#spring.flyway.baseline-on-migrate=true
