--- a/aws-application.yml
+++ b/aws-application.yml
@@ -29,3 +29,8 @@ spring:
 logging:
   level:
     root: error
+
+aws:
+  accessKeyId: ${AWS_ACCESS_KEY}
+  secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
+  region: ${AWS_REGION}
