--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,7 @@ spring.h2.console.path=/h2-console
 #org.hibernate.SQL=debug
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+aws.accessKeyId=AKIA3OZIMWVWZQGSN47P
+aws.secretAccessKey=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
+aws.region=ap-northeast-2
