--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -16,7 +16,5 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=500
 #spring.flyway.enabled=true
 #spring.flyway.baseline-on-migrate=true
 
-
-aws.accessKeyId=AKIA3OZIMWVWZQGSN47P
-aws.secretAccessKey=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
-aws.region=ap-northeast-2
+aws.push.region=ap-northeast-2
+aws.sms.region=ap-northeast-1
